--- a/register.html
+++ b/register.html
@@ -56,7 +56,7 @@
         </form>
         
         <div class="Register">
-            Already have an account? <a href="./login.html">Login</a>
+            Already have an account? <a href="./index.html">Login</a>
         </div>
      </div>
     </div>
